Enhance HTML metadata and improve TaskSection header structure for better accessibility and clarity

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Real Time Task Management</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description"
+    content="A real-time task management app with live updates, collaboration, and smart organization tools." />
+  <title>Real-Time Task Management</title>
 </head>
 
 <body>
